--- a/vs-2015/DragonflyTests/DragonflyTests.vcxproj
+++ b/vs-2015/DragonflyTests/DragonflyTests.vcxproj
@@ -70,7 +70,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>..\..\..\SFML-2.4\include;..\Dragonfly\;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\..\SFML-2.4\lib;..\Debug\;$(LibraryPath)</LibraryPath>
+    <LibraryPath>..\..\..\SFML-2.4\lib;..\lib\;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>..\..\..\SFML-2.4\include;..\Dragonfly\;$(IncludePath)</IncludePath>
